--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "@mui/x-data-grid": "^7.26.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
