--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^6.4.4",
     "@mui/x-data-grid": "^7.26.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
